# Claude-Hackathon

./: .env.example  .gitignore  CLAUDE.md  README.md  package-lock.json
.claude/: settings.json
docs/superpowers/plans/: 2026-03-25-jsonl-to-web.md
scraper/: .gitignore  pyproject.toml
scraper/src/scraper/: __init__.py  config.py  main.py  models.py
scraper/src/scraper/exporters/: jsonl.py  postgres.py
scraper/src/scraper/parsers/: spareroom.py  zoopla.py
scraper/src/scraper/spiders/: base.py  spareroom.py  zoopla.py
scraper/src/scraper/utils/: rate_limit.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/scrape/: route.ts
web/src/app/liked/: page.tsx
web/src/app/progress/: .page.tsx.swp  page.tsx
web/src/components/: AppShell.tsx  BottomNav.tsx  GalleryModal.tsx  LocationModal.tsx  NoteModal.tsx  PriceToggle.tsx  SwipeCard.tsx  SwipeDeck.tsx
web/src/data/: listings.ts  mock-listings.ts
web/src/lib/: claude-processor.ts  listings.ts  pricing.ts  store.tsx  swipe.ts
web/src/types/: listing.ts
