[project]
name = "swipestay-scraper"
version = "0.1.0"
description = "Web scraper for London student accommodation listings"
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "asyncpg>=0.29.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
swipestay-scrape = "scraper.main:cli"

[tool.ruff]
line-length = 100
target-version = "py310"
